fixed spacing issues

--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,4 +1,5 @@
-@media only screen and (min-width:1200px)
+@media only screen 
+and (min-width:1200px)
 {
 	.software {
 		width:128px; 
